<resources>
    <string name="app_name">InputMethods4.2</string>
    <string name="choose_a_delivery_method">Choose a delivery method!!!</string>
    <string name="note">Note</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="same_day">Same day messenger delivery</string>
    <string name="next_day">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
</resources>
