<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C27B3"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lin_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/name"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="#68FF3E00"
            android:textColorHint="#68DFD7D7"
            android:textSize="16sp"
            tools:ignore="Autofill"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin_name">

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/address"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:textColor="#68FF3E00"
            android:textColorHint="#68DFD7D7"
            android:textSize="16sp"
            tools:ignore="Autofill" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin_address">

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/phone"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="#68FF3E00"
            android:textColorHint="#68DFD7D7"
            android:textSize="16sp"
            tools:ignore="Autofill"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin_phone">

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/note"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/et_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/note"
            android:inputType="textMultiLine"
            android:textColor="#68FF3E00"
            android:textColorHint="#68DFD7D7"
            android:textSize="16sp"
            tools:ignore="Autofill"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_radio_selections"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin_note">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/choose_a_delivery_method"
            android:textColor="#FF5722"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rg_deliveryOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_delivery_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/same_day"
                android:textSize="16sp"
                android:textColor="#FF5722"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/rb_delivery_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_day"
                android:textSize="16sp"
                android:textColor="#FF5722"
                />
            <RadioButton
                android:id="@+id/rb_delivery_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_up"
                android:textSize="16sp"
                android:textColor="#FF5722"
                />
        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

